[package]
name = "ironic-gui"
version = "0.1.0"
authors = ["Andrew Piroli"]
edition = "2024"
default-run = "ironic-gui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ironic-core = { path = "../core" }
ironic-backend = { path = "../back" }
slint = "1.16.1"

[target.'cfg(windows)'.build-dependencies]
embed-manifest = "1.5.0"

[build-dependencies]
slint-build = "1.16.1"
